--- a/GenericStackLibrary/GenericStackLibrary.csproj
+++ b/GenericStackLibrary/GenericStackLibrary.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenericStack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StackNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
